Create two classes for MultiThreads.On extend Threats and other implements Runnable. Both are implemented at the Main method. Create a while loop to print the end after the threads are ended.